# mrplot

./: .gitignore  .pre-commit-config.yaml  MRISlices.py  indexingUtils.py  plotUtils.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: test.yml
mri_plot/: cli.py
mrplot/: MRISlices.py  cli.py  plotUtils.py
src/mrplot/: MRISlices.py  MRIVideo.py  __init__.py  bids.py  cli.py  groupPlotter.py  helperFunctions.py  indexingUtils.py  optimize_bids.py  plotConfig.py  plotUtils.py  plotting.py  print.py  processingUtils.py  slice.py
src/mrplot/ood/: bids.py  cli_bids_slices.py  clogging.py  plotting.py  print.py  slice.py
tests/: conftest.py  test_cli.py  test_group_plotter.py  test_indexing_utils.py  test_plot_utils.py
