[tool.poetry]
name = "mrplot"
version = "0.1.0"
description = "A lightweight package for plotting 3D and higher dimensional MRI volumes."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

packages = [
    { include = "mrplot", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10"
contourpy = "1.3.1"
cycler = "0.12.1"
exceptiongroup = "1.2.2"
fonttools = "4.55.8"
imageio = "2.37.0"
imageio-ffmpeg = "0.6.0"
importlib-resources = "6.5.2"
iniconfig = "2.0.0"
kiwisolver = "1.4.8"
matplotlib = "3.10.0"
nibabel = "5.3.2"
numpy = "2.2.2"
packaging = "24.2"
pillow = "11.1.0"
pluggy = "1.5.0"
pyparsing = "3.2.1"
pytest = "8.3.4"
python-dateutil = "2.9.0.post0"
six = "1.17.0"
tomli = "2.2.1"
typing-extensions = "4.12.2"
click = "^8.1.8"


[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
pytest = "^8.3.4"
black = "^25.1.0"
pytest-cov = "^6.0.0"
pre-commit = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mrplot = "mrplot.cli:cli"
